# sci_po_game

./: .gitignore
po_game/: CMakeLists.txt  readme.md
po_game/cmake/: SFML.cmake
po_game/source/: CMakeSources.cmake  main.cpp
sci_project/: CMakeLists.txt
sci_project/src/: CMakeSources.cmake  main.cpp  object.cpp  object.hpp
